kubernetes/streamlit-app.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: streamlit-app
  labels:
    app: streamlit-app

spec:
  selector:
    matchLabels:
     app: streamlit-app
  replicas: 1

  template:
    metadata:
      labels:
        app: streamlit-app

    spec:
      containers:
      - name: streamlit-app
        image: <您的 Azure Container Registry 名稱>.azurecr.io/streamlit-app:1
        imagePullPolicy: Always

        resources:
          limits:            
            cpu: 250m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi
        ports:
        - name: web
          containerPort: 8501
---
apiVersion: v1
kind: Service

metadata:
  name: streamlit-app-svc

spec:
  selector:
    app: streamlit-app
  ports:
  - name: http
    port: 80
    targetPort: 8501
  type: ClusterIP
